--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
         <blockquote>
             This website, as well as the websites included below, is meant to be supported for modern browsers on PC.<br>
-            This means that the font may be weird, or the features may not work as expected.<br>
-            If you see any issues, contact me and let me know!
+            If you see any issues, <a href="#connections">contact me</a> and let me know!
         </blockquote>
 
         <h2>The Portal</h2>
@@ -52,41 +51,46 @@
         T - Thinks before empathizing<br>
         P - Prefers the flow
     </span>
-</span>! (hover for more information) However, due to some personal reasons, life decided to hate on me, and I have developed ADHD, OCD and social anxiety.<br>
+</span>! <span title="Not this text, though!">(hover for more information)</span> However, due to some <span title="If you want, navigate to profiles/private."><i>personal reasons</i></span>, <span title="Definitely not a
+命に嫌われている reference...">life decided to hate on me</span>, and I have developed ADHD, OCD and social anxiety.<br>
             I enjoy doing lots of things, but I am just going to name a few:
         </p>
 
         <ul>
             <li>
                 🌐 <b>Studying languages, linguistics, and making conlangs</b><br>
-                I want to study and experience lots of languages both for my conlangs and for fun.<br>
-                I can speak Korean and English pretty fluently, and can speak some Japanese and Chinese.<br>
-                I'm also currently studying Dutch, and interested in studying Greek and German.
+                I want to study and experience many languages both for my conlangs and for fun.<br>
+                I can speak <b>Korean</b> and <b>English</b> pretty fluently, and can speak some <b>Japanese</b> and <b>Chinese.</b><br>
+                I'm also currently studying <b>Dutch,</b> and interested in studying <span title="Greek has the best writing system imo. However, math decided to ruin it for me, and..."><b>Greek</b></span> and <b>German.</b>
             </li>
             <li>
                 💻 <b>Making random programs and learning programming languages</b><br>
-                I usually work on Linux, but I do not want to force myself into lots of intense programming work. I usually just make documents (like this!) or make small utility programs.<br>
-                I am usually expected to write code in Python, because it suits the best for me. I am trying game development via <code>pygame</code> nowadays, but I also make interactive CLIs with Python.<br>
-                I am also able to write some code in JavaScript and TypeScript. I started programming by learning JavaScript, so I know lots of things about JavaScript, but I still suck at actual web development.<br>
-                (...and there's the markup languages. I can write HTML, CSS, Markdown, and some LaTeX. But only if you consider them actual programming languages.)<br>
+                I use <span title="(I use Linux Mint btw, please don't judge me)"><b>Linux</b></span>, but I do not want to force myself into intense programming work.<br>
+                I usually just make documents and webpages (like this!) or small utility programs using Python.<br>
+                I am usually expected to write code in <b>Python</b>, because it suits the best for me.<br>
+                I can also create GUI programs via <code>pygame</code>, but I used to make interactive CLIs and TUIs with Python.<br>
+                I am also able to write some code in <b>JavaScript</b> and <b>TypeScript.</b><br>
+                When I was first starting programming, <span title="Don't ask me why, I don't remember why either.">I started by learning JavaScript,</span> so I know lots of, rather <i>random</i> things about JavaScript.<br>
+                However, I still suck at actual web development, so I try to improve myself in web development by making simple games.<br>
+                (...and there's the markup languages. I can write <b>HTML, <span title="I usually just spam text-shadow and box-shadow, duh.">CSS,</span> Markdown, and some LaTeX.</b> But only if you consider them actual programming languages.)<br>
             </li>
             <li>
                 🔬 <b>Studying science and its various sub-branches</b><br>
                 I like most sub-branches of science, and especially <b>🧪 chemistry, 🔭 astronomy, and ⚛️ physics.</b><br>
-                I especially love astronomy, because I had interest in it ever since I was young.<br>
+                <b>I especially love astronomy,</b> because I had interest in it ever since I was young.<br>
                 Studying science isn't in my top priorities anymore, but when someone brings up the topic, I am still going to like it.
             </li>
             <li>
                 🎮 <b>Playing games</b><br>
                 I especially like <b>idle/clicker/incremental games, rhythm games, puzzle games, space simulation games, and platformer games.</b><br>
-                I don't really like <b>horror games, adventure games, resource-management heavy games and RPG games</b>, though.<br>
-                I play games everytime I feel like it, or I am stressed out because of everything.<br>
+                I don't really like horror games, adventure games, resource-management heavy games and RPG games, though.<br>
+                I play games everytime I'm bored or I'm overwhelmed by everything, but lately I have been returning back to programming.<br>
             </li>
             <li>
                 🎧 <b>Listening to music, and playing instruments.</b><br>
-                I really, <i>really</i> like Japanese music. I mostly enjoy PJSK songs and vocaloid songs, but I sometimes listen to general J-Pop.<br>
+                <span title="I really, REALLY hate Korean music.">I really, <i>really</i> like Japanese music.</span> I mostly enjoy <span title="HELLO!! I'M EMU OTORI! EMU IS MEANING... SMILE!!!!!!!!">PJSK</span> songs and vocaloid songs, but I sometimes listen to general J-Pop.<br>
                 I also listen to some electronic music but only occasionally. I always put music on when programming or working on anything.<br>
-                I like discovering random music, and occasionally looking back at Geometry Dash music. (brings me a lot of nostalgia)<br>
+                I like discovering random music, and occasionally looking back at Geometry Dash music. <span title="Yes. Everything is nostalgia for me.">(brings me a lot of nostalgia)</span><br>
                 I can also play the drum, but I'm not really that good at it.
             </li>
             <li>
@@ -96,7 +100,8 @@
 
         <p>
             That said, if you have any suggestions for any of my conlangs or my works, feel free to <a href="#connections">contact me </a> and ask me about your inquiry!<br><br>
-            Thanks for reading this to the end! I will add more stuff about myself later on, so please check here frequently, but only if you'd like :3
+            Thanks for reading this to the end! I will add more stuff about myself later on, <span title="I know that you won't. ( ͡° ͜ʖ ͡°)">so please check here frequently, but only if you'd like :3</span><br>
+            <span id="dim">Psst, there's some easter eggs scattered around that pop up when you hover over texts. Good luck finding them!</span>
         </p>
 
         <h2 id="connections">Connections</h2>
