--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         T - Thinks before empathizing<br>
         P - Prefers the flow
     </span>
-</span>! <span title="Not this text, though!">(hover for more information)</span> However, due to some <span title="If you want, navigate to profiles/private."><i>personal reasons</i></span>, <span title="Definitely not a
+</span>! <span title="Not this text, though!">(hover for more information)</span> However, due to some <span title="If you want, add /private to the URL."><i>personal reasons</i></span>, <span title="Definitely not a
 命に嫌われている reference...">life decided to hate on me</span>, and I have developed ADHD, OCD and social anxiety.<br>
             I enjoy doing lots of things, but I am just going to name a few:
         </p>
@@ -88,13 +88,13 @@
             </li>
             <li>
                 🎧 <b>Listening to music, and playing instruments.</b><br>
-                <span title="I really, REALLY hate Korean music.">I really, <i>really</i> like Japanese music.</span> I mostly enjoy <span title="HELLO!! I'M EMU OTORI! EMU IS MEANING... SMILE!!!!!!!!">PJSK</span> songs and vocaloid songs, but I sometimes listen to general J-Pop.<br>
-                I also listen to some electronic music but only occasionally. I always put music on when programming or working on anything.<br>
+                <span title="I really, REALLY hate Korean music.">I really, <i>really</i> like Japanese music.</span> I mostly enjoy <span title="HELLO!! I'M EMU OTORI! EMU IS MEANING... SMILE!!!!!!!!"><b>Project Sekai</b></span> songs and <b>vocaloid</b> songs, as well as general J-pop.<br>
+                I also listen to electronic music occasionally. I always put music on when programming or working on anything.<br>
                 I like discovering random music, and occasionally looking back at Geometry Dash music. <span title="Yes. Everything is nostalgia for me.">(brings me a lot of nostalgia)</span><br>
-                I can also play the drum, but I'm not really that good at it.
+                I can also play the drum, but I'm not really that good at it. I used to be able to play the piano, but I didn't find fun in playing the piano so I quit.
             </li>
             <li>
-                I also have some other small interests, such as solving Rubik's cubes, and drawing anime. But I'd really like to try out other things as well!
+                I also have some other small interests, such as <b>solving Rubik's cubes,</b> and <span title="Why did I put this? I suck at drawing anime."><b>drawing anime.</b></span> But I'd really like to try out other things as well!
             </li>
         </ul>
 
