Update status and css

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <h2>About me</h2>
 
         <div id="status-bar">
-            <b>Status:</b> 🫡 I am going to be on a long hiatus <i>(Jan 4 ~ Jan 25 in my local time)</i>, I'll miss y'all! o7<br><i>For more information, refer to
-            <a href="https://lanzoor.github.io/documents/announcements/A-0001">announcement A-0001</a>!</i>
+            <b>Status:</b> 🫡 I'm temporaily back!! Refer to
+            <a href="https://lanzoor.github.io/documents/announcements/0002.html">announcement 0002</a>. Thank you!</i>
         </div>
 
         <hr><br>
@@ -203,11 +203,13 @@
     </div>
 
     <div id="end">
-        <p id="centered-end">
-            All visuals and styles by Lanzoor.<br>
-            <b>Do not redistribute without permission.</b><br>
-            Monospace font: <a href="https://www.jetbrains.com/lp/mono/" target="_blank"><b>JetBrains Mono</b></a>
-        </p>
+        <span id="centered-end">
+            <p>
+                All visuals and styles by Lanzoor.<br>
+                <b><i>Do not redistribute without permission.</i></b><br>
+                Monospace font: <a href="https://www.jetbrains.com/lp/mono/" target="_blank"><b>JetBrains Mono</b></a>
+            </p>
+        </span>
         <button id="back-to-top">↑ Go back to the top ↑</button>
     </div>
 
