--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         <hr><br>
 
         <p>
-
             <b>Hello there!</b> 👋<br>
 
             I go by the name of
@@ -63,7 +62,7 @@
                     The primary name means <b>glowing star</b>,<br>
                     and the secondary name means <b>orchid + teal/blue/cyan + lapis lazuli</b>.<br>
                 </span>
-            </span> but you can still call me ランジョア.
+            </span> but you can still call me ランジョア.<br>
 
             <span class="tooltip">
                 <span class="tooltip-label">Here</span>
@@ -73,11 +72,14 @@
                     Greek - <b>Κόσει Λάνσο</b><br>
                     Russian - <b>Косей Лансо</b>
                 </span>
-            </span> are my names in other languages! I also have a few more aliases, but they are not used.<br>
+            </span> are my names in other languages! I also have a few more aliases, but they are not used anymore.<br>
 
             My pronouns are <b>he/him</b>, and I live in <b>South Korea</b> 🇰🇷! <span class="dim">(UTC+9 / GMT+9, my local time is <code id="time_text">HH:MM:SS</code>!)</span><br>
+
             I am usually active on Discord most of the time. My birthday is <b>November 2nd</b> 🎂, and my <span title="In fact, I love this color so much that the whole document you're reading RIGHT NOW is purple! How interesting!!!!">favorite colors</span> are <b id="color">Blue / Indigo / Purple</b>.<br>
+
             My MBTI is
+
             <span class="tooltip">
                 <span class="tooltip-label">INTP</span>
                 <span class="tooltip-text">
@@ -94,8 +96,14 @@
                 <span class="tooltip-text">
                     If you want to, append <b>/private</b> to the URL.
                 </span>
-            </span>, I have developed some difficulties in living.<br>
-            <blockquote id="secret-link"><a href="./private/index.html">You already discovered this secret! Click this link to read it again.</a></blockquote>
+            </span>, I have developed some difficulties in life.<br>
+
+            <blockquote id="secret-link">
+                <a href="./private/index.html">
+                    You have already found this secret! Click this link to read it again.
+                </a>
+            </blockquote>
+
             I enjoy doing lots of things, but I am just going to name a few:
         </p>
 
@@ -104,8 +112,38 @@
                 <h3>🌐 Studying languages, linguistics, and making conlangs</h3>
 
                 I want to study and experience many languages both for my conlangs and for fun.<br>
-                I can speak <b>Korean</b> and <b>English</b> pretty fluently, and can speak some <b>Japanese</b> and <b>Chinese.</b><br>
-                I'm also currently studying <b>Dutch,</b> and interested in studying <span title="Greek has the best writing system imo. However, math decided to ruin it for me, and..."><b>Greek</b></span> and <b>German.</b>
+
+                I can speak <b>Korean</b> and
+
+                <span class="tooltip">
+                    <span class="tooltip-label">English</span>
+                    <span class="tooltip-text">
+                        I used the <i>immersion method</i>™ for learning English.<br>
+                        I talked to a lot of online friends, and consumed a HECK TON of English content.<br>
+                        I think this was really effective for me, because it was genuinely fun for me.<br>
+                        English is one of the hardest languages to learn, so if you ever feel stuck,<br>
+                        <b>you should definitely try out the immersion method!</b>
+                    </span>
+                </span> pretty fluently, and I'm able to speak some
+
+                <span class="tooltip">
+                    <span class="tooltip-label">Japanese</span>
+                    <span class="tooltip-text">
+                        I started learning Japanese some-time around <b>March 2025</b> due to <i>some reasons</i>.<br>
+                        I really like talking to my friends in Japanese, as well as comparing the language with Korean.
+                    </span>
+                </span> and
+
+                <span class="tooltip">
+                    <span class="tooltip-label">Chinese</span>
+                    <span class="tooltip-text">
+                        I used to be <b>somewhat decent</b> at Chinese <i>(HSK 2~3)</i> when I was younger,<br>
+                        but <b>I forgot most of it</b> due to dismotivation.<br>
+                        I blame my younger self for this, Chinese vocab is way too stressful to learn aaa
+                    </span>
+                </span>.<br>
+
+                I'm also currently studying <b>Dutch,</b> and interested in studying <b>Greek</b> and <b>German.</b>
             </li>
             <li>
                 <h3>💻 Making random programs and learning programming languages</h3>
@@ -147,12 +185,13 @@
                 <h3>...and more!</h3>
 
                 I also have some other small interests, such as
+
                 <span class="tooltip">
                     <span class="tooltip-label">solving Rubik's cubes</span>
                     <span class="tooltip-text">
-                        I can solve a variety of cubes even outside of the WCA puzzles.<br>
-                        My PR / PB on the 3x3 is <b>14.6</b> seconds.<br>
-                        However, solving cubes isn't in my priorities anymore; I don't find it fun as what I used to do.
+                        I can speedcube somewhat decently, but I also like solving lots of different types of cubes.<br>
+                        My PB / PR on the 3x3 cube is <b>14.6 seconds</b>.<br>
+                        I don't find fun in cubing compared to what I used to before, but I used to know a lot of things about cubing.
                     </span>
                 </span>, and <span title="Why did I put this? I suck at drawing anime."><b>drawing anime.</b></span> But I'd really like to try out other things as well!
             </li>
