Erm, what even is a flex?

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <span id="centered-end">
             <p>
                 Website made with CSS and JS.<br>
-                All visuals and styles by Lanzoor, <b>Do not redistribute without permission.</b><br>
+                All visuals and styles by Lanzoor,<br><b>Do not redistribute without permission.</b><br>
                 Monospace font: <a href="https://www.jetbrains.com/lp/mono/" target="_blank"><b>JetBrains Mono</b></a>
             </p>
         </span>
