--- a/private/index.html
+++ b/private/index.html
@@ -13,10 +13,11 @@
             <p>
                 You found the secret! <i>Sort of.</i>
                 <b>
-                    Just letting you know that this section contains some private information that I'd like to tell you,<br>
+                    Just letting you know that this section contains some information about myself that I'd like to tell you,<br>
                     but also may discomfort some users.
                 </b>
-                I don't want others having to bother about this while talking to me. Please do not overhear anything I say here.
+                I don't want others having to bother about this while talking to me. Please do not overhear anything I say here.<br>
+                Welp, here goes nothing...
             </p>
 
             <blockquote id="private">
@@ -34,7 +35,7 @@
 
                     Even after making changes, and every point has been cleared, I've repeatedly experienced situations where new connections faded without explanation, or where I felt ignored or misunderstood by people I genuinely cared about. Those experiences left a lasting impact, and they have influenced how I approach relationships today. I had to change my texting style countless times due to this, and kept thinking that I wasn't empathetic enough. I even tried to change my personality. I can become anxious, overthink interactions, or withdraw unintentionally when I feel uncertain.<br><br>
 
-                    Due to these experiences, I struggle with periods of intense mental overload. When that happens, my thoughts become scattered or shut down entirely, and things that once mattered to me can feel distant, boring, or impossible to engage with. During my lowest moments, this has included passive thoughts about not wanting to exist or questioning whether continuing is worth it. I am actively working through this and seeking healthier ways to live.<br><br>
+                    Due to these experiences, I struggle with periods of intense mental overload. When that happens, my thoughts become scattered or shut down entirely, and things that once mattered to me (such as programming and even gaming) can feel distant, boring, or impossible to engage with. During my lowest moments, this has included passive thoughts about not wanting to exist or questioning whether continuing is worth it. I am actively working through this and seeking healthier ways to live. I really appreciate the small things in life, but they also tend to hurt me the most.<br><br>
 
                     I'm not sharing this to ask for sympathy, forgiveness, or special treatment. I'm sharing it because this history shapes how I communicate and react, even when I'm trying my best. I value honesty, empathy, and growth, and I continue to work toward being better aligned with those values.<br><br>
 
