Rename some objects, and fix the animations

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <div class="container">
         <h1 id="top">Welcome to my profile!</h1>
 
-
         <div class="profile-wrapper">
             <div id="profile-block">
-                <img id="profile-pic" src="./assets/iris_modern.png" alt="Profile picture">
+                <img id="profile-pic" src="./assets/iris-modern.png" alt="Profile picture">
                 <p style="text-align: center; margin-top: 10px">Original character <b>Iris</b> made by me</p>
             </div>
 
@@ -50,8 +49,7 @@
         <h2>About me</h2>
 
         <div id="status-bar">
-            <b>Status:</b> ⌨ Nvidia GPU is messing with my VSCode performance, so I really can't program nowadays 😭<br>
-            I have also returned to grinding stars and moons in Geometry Dash, so that's one thing.
+            <b>Status:</b> Finally I can program now!! My GPUs are back to normal, and I also occasionally play games as well.
         </div>
 
         <hr><br>
@@ -94,7 +92,7 @@
             local time is <code id="time-text">HH:MM:SS</code>!)</span><br>
 
             I am usually active on Discord most of the time. My birthday is <b>November 2nd</b> 🎂, and my favorite colors are
-            <b id="color">Blue / Indigo / Purple</b>.<br>
+            <b id="favorite-color">Blue / Indigo / Purple</b>.<br>
 
             My MBTI is
 
@@ -289,8 +287,8 @@
     </div>
 
 
-    <div id="end">
-        <span id="centered-end">
+    <div id="section-bottom">
+        <span id="section-bottom-centered">
             <p>
                 Website made with CSS and JS.<br>
                 All visuals and styles by Lanzoor,<br>
