--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </span> of <b>VSCode</b> for programming. Please do not judge me for this!!<br>
                     I do not want to force myself into intense programming work.<br><br>
 
-                    Fist off, I really like making documents and webpages (like this!).<br>
+                    First off, I really like making documents and webpages (like this!) using <b>HTML, CSS, and occasionally JavaScript</b>.<br>
                     I am usually expected to write code in <b>Python (upper-intermediate)</b>, because it suits the best for me.<br>
                     I am also able to write some code in <b>JavaScript</b> and <b>TypeScript</b> using <b>Node</b>.<br><br>
 
@@ -149,7 +149,7 @@
                     However, I still suck at actual web development, so I try to improve myself in web development by making
                     simple games and webpages.<br><br>
 
-                    (...and there's the markup languages. I can write <b>HTML, CSS, Markdown, and some LaTeX.</b> But only if you consider them actual programming languages.)<br>
+                    (I can also write good Markdown code, and a bit of LaTeX. But they're not actual programming languages, right?)
                 </li>
                 <li>
                     <h3>🌐 Studying languages, linguistics, and making conlangs</h3>
@@ -166,8 +166,7 @@
                     I started learning Japanese some-time around <b>March 2025</b> because I discovered Japanese music and anime.<br>
                     I really like talking to my friends in Japanese, as well as comparing the language with Korean.<br><br>
 
-                    I used to be <b>somewhat decent</b> at Chinese <i>(HSK 2~3)</i> when I was younger,<br>
-                    but <b>I forgot most of it</b> due to dismotivation.<br>
+                    I used to be <b>somewhat decent</b> at Chinese <i>(HSK 2~3)</i> when I was younger, but <b>I forgot most of it</b> due to dismotivation.<br>
                     I blame my younger self for this, Chinese vocab is way too stressful to learn aaa
                 </li>
                 <li>
