Update date, and fix some line spacing

--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
                 <li>
                     <h3>🧊 Solving Rubik's cubes</h3>
 
-                    I can speedcube somewhat decently, but I also like solving lots of different types of cubes.<br>
-                    My PB /
+                    I can speedcube somewhat decently, but I also like solving lots of different types of cubes. My PB /
 
                     <span class="tooltip">
                         <span class="tooltip-label">PR</span>
@@ -286,7 +285,7 @@
                 <p>
                     Website made with HTML, CSS, JavaScript and love! All visuals and styles by Lanzoor.<br>
                     <b>Do not redistribute without permission.</b> Monospace font: <a href="https://www.jetbrains.com/lp/mono/" target="_blank"><b>JetBrains Mono</b></a><br>
-                    <span class="dim">Last updated @ Jan 27th</span>
+                    <span class="dim">Last updated @ Jan 28th</span>
                 </p>
             </span>
             <button id="back-to-top">↑ Go back to the top ↑</button>
