FATAL: Update link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2>About me</h2>
 
             <div id="status-bar">
-                <b>Status:</b> 🇯🇵 On a trip to Japan, (Jan 30 ~ Feb 4, local time) refer to <a href="https:/lanzoor.github.io/documents/announcements/0003.html">announcement 0000</a> for more details! Thank you for everything.
+                <b>Status:</b> 🇯🇵 On a trip to Japan, (Jan 30 ~ Feb 4, local time) refer to <a href="https://lanzoor.github.io/documents/announcements/0003.html">announcement 0003</a> for more details! Thank you for everything.
             </div>
 
             <hr><br>
