Update date and status, polish some paragraphs and add anime section.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <h1 id="top">Welcome to my profile!</h1>
 
-            <div class="profile-wrapper">
+            <div id="profile-wrapper">
                 <div id="profile-block">
                     <img id="profile-pic" src="./assets/iris-modern.png" alt="Profile picture">
                     <p style="text-align: center; margin-top: 10px">Original character <b>Iris</b> made by me</p>
@@ -49,7 +49,7 @@
             <h2>About me</h2>
 
             <div id="status-bar">
-                <b>Status:</b> 🇯🇵 On a trip to Japan, (Jan 30 ~ Feb 4, local time) refer to <a href="https://lanzoor.github.io/documents/announcements/0003.html">announcement 0003</a> for more details! Thank you for everything.
+                <b>Status:</b> 😭 The trip ended ALREADY, so I'm back to Korea! 🇰🇷
             </div>
 
             <hr><br>
@@ -120,7 +120,7 @@
                 </a>
             </blockquote>
 
-            I enjoy doing lots of things, but I am just going to name a few:
+            I enjoy doing lots of activities, so here's a very detailed explanation for each one of them!
             </p>
 
             <ul>
@@ -149,8 +149,9 @@
                     However, I still suck at actual web development, so I try to improve myself in web development by making
                     simple games and webpages.<br><br>
 
-                    (I can also write good Markdown code, and a bit of LaTeX. But they're not actual programming languages, right?)
+                    (I can also write some Markdown code, and a bit of LaTeX. But they're not actual programming languages, right?)
                 </li>
+
                 <li>
                     <h3>🌐 Studying languages, linguistics, and making conlangs</h3>
 
@@ -167,16 +168,20 @@
                     I really like talking to my friends in Japanese, as well as comparing the language with Korean.<br><br>
 
                     I used to be <b>somewhat decent</b> at Chinese <i>(HSK 2~3)</i> when I was younger, but <b>I forgot most of it</b> due to dismotivation.<br>
+                    Recently, I got motivated to learn Chinese again for some reason, so I'm trying my best to remember all the vocabulary.<br>
                     I blame my younger self for this, Chinese vocab is way too stressful to learn aaa
                 </li>
+
                 <li>
                     <h3>🔬 Studying science and its various sub-branches</h3>
 
                     I like most sub-branches of science, but I especially like <b>🔭 astronomy, ⚛️ physics, and 🧪 chemistry.</b><br>
                     <b>I especially love astronomy,</b> because I had interest in it ever since I was young.<br>
-                    Studying science isn't in my top priorities anymore, but when someone brings up the topic, I am still
-                    going to like it.
+                    Studying science isn't in my top priorities anymore, but when someone brings up the topic, I am still going to like it.
                 </li>
+
+                <hr>
+
                 <li>
                     <h3>🎮 Playing games</h3>
 
@@ -184,6 +189,7 @@
                     However, I don't really like horror games, adventure games, resource-management heavy games and RPG games, though.<br>
                     I play games everytime I'm bored or I'm overwhelmed by everything, but lately I have been returning back to programming.
                 </li>
+
                 <li>
                     <h3>🎧 Listening to music, and playing instruments</h3>
 
@@ -194,6 +200,15 @@
                     I can also play the drum, but I'm not really that good at it.<br>
                     I used to be able to play the piano, but I didn't find fun in playing the piano so I quit.<br>
                     I love music theory, and I want to make music someday as well.
+                </li>
+
+                <li>
+                    <h3>🎬 Watching anime and shows</h3>
+
+                    Yup, you knew that this would come eventually!<br>
+                    I really like watching anime in my free time, it is really fun to watch!<br>
+                    I enjoy most genres of anime, but my favorites include <b>comedy, tragedy, romance, iyashikei, gore and horror.</b> (please don't judge btw 😭)<br>
+                    Recently, I wasn't able to watch anime because my schedule was occupied, but now that things are starting to clear up, I may return to binge-watching anime!
                 </li>
                 <li>
                     <h3>🧊 Solving Rubik's cubes</h3>
@@ -207,6 +222,7 @@
                     I would really like to participate in more of those fun cubing competitions!<br>
                     I don't find fun in cubing compared to what I used to before, but I used to know a lot of things about cubing.
                 </li>
+
                 <li>
                     <h3>...and more!</h3>
 
@@ -272,7 +288,7 @@
             <h2 id="special-thanks">Special Thanks</h2>
 
             <p>
-                Thank you Discord user <code>tactical02_</code> for making great suggestions for the website!<br>
+                Thank you Discord user <code>tactical02_</code> for making great suggestions and fixes for the website!<br>
                 Thank you Discord user <code>sweden_finlandia.hoi4</code> for drawing my original character, Iris.<br>
                 And thank <i>you</i> for reading this to the end! No like seriously, you are one of the best people I've seen so far! :O<br>
                 I will add more stuff about myself later on, so please check here frequently, but only if you'd like. :3<br>
@@ -285,7 +301,7 @@
                 <p>
                     Website made with HTML, CSS, JavaScript and love! All visuals and styles by Lanzoor.<br>
                     <b>Do not redistribute without permission.</b> Monospace font: <a href="https://www.jetbrains.com/lp/mono/" target="_blank"><b>JetBrains Mono</b></a><br>
-                    <span class="dim">Last updated @ Jan 29th</span>
+                    <span class="dim">Last updated @ Feb 4th</span>
                 </p>
             </span>
             <button id="back-to-top">↑ Go back to the top ↑</button>
